<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070000"
    tools:context=".AdvancedLevel">

    <TextView
        android:id="@+id/ScoreAdvanced"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical|end"
        android:textColor="#D3E8731A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAdvanced1"
        android:layout_width="163dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreAdvanced" />

    <ImageView
        android:id="@+id/imageAdvanced2"
        android:layout_width="163dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAdvanced1" />

    <ImageView
        android:id="@+id/imageAdvanced3"
        android:layout_width="163dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAdvanced2" />

    <EditText
        android:id="@+id/image1EditText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/enter_brand1"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced1"
        app:layout_constraintTop_toBottomOf="@+id/ScoreAdvanced" />

    <EditText
        android:id="@+id/image2EditText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/enter_brand2"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced2"
        app:layout_constraintTop_toBottomOf="@+id/image1RealText" />

    <EditText
        android:id="@+id/image3EditText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/enter_brand3"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced3"
        app:layout_constraintTop_toBottomOf="@+id/imageAdvanced2" />

    <TextView
        android:id="@+id/image1RealText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced1"
        app:layout_constraintTop_toBottomOf="@+id/image1EditText" />

    <TextView
        android:id="@+id/image2RealText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced2"
        app:layout_constraintTop_toBottomOf="@+id/image2EditText" />

    <TextView
        android:id="@+id/image3RealText"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageAdvanced3"
        app:layout_constraintTop_toBottomOf="@+id/image3EditText" />

    <TextView
        android:id="@+id/correctionAdvanced"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAdvanced3" />

    <Button
        android:id="@+id/submitAdvanced"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="24sp"
        app:backgroundTint="#D3E8731A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correctionAdvanced" />
</androidx.constraintlayout.widget.ConstraintLayout>